new delete feature

--- a/index.css
+++ b/index.css
@@ -28,3 +28,9 @@ button {
     background: white;
     color: black;
 }
+
+#delete-mark{
+    border: 0px;
+    background: white;
+    color: black;
+}
